Ensure that the QUIC frame layer produces data when asked to.